--- a/entidades/entidades.vbproj
+++ b/entidades/entidades.vbproj
@@ -84,6 +84,7 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
     <Compile Include="Productos.vb" />
+    <Compile Include="Ventas.vb" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="My Project\Resources.resx">
