--- a/DAO/DAO.vbproj
+++ b/DAO/DAO.vbproj
@@ -80,6 +80,8 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="ProductosDao.vb" />
+    <Compile Include="VentasDao.vb" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="My Project\Resources.resx">
